Fix random recipe font size when a full meal is displayed - previously moved clear button out of bounds

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h2 {
 
 h1 {
   text-align: center;
-  font-size: 26px;
+  font-size: clamp(16px, 4vw, 22px);
   margin-top: -7vh;
   padding: 20px;
   font-weight: 900;
